--- a/style.css
+++ b/style.css
@@ -45,13 +45,31 @@ body{
 .escola-titulo{
     padding: 24px 0;
 }
+
 .estudante-imagem{
     width: 120px;
 }
+
 .estudante-icone{
     width: 24px;
+    padding: 4px 8px;
 }
+
+.estudante{
+    padding: 24px 0;
+}
+
 .estudante-div{
     text-align: center;
-    padding: 24px 0;
+    padding: 16px 0;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 20px 0;
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns:20% 20% 20% 20% 20%;
 }
